@@ -26,6 +26,8 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 === `0.2.9` (in progress)
 
+- [FIX] In HTTP server spans, ensure values of multiple request headers with same name are captured as an array.
+Also, do not normalize `-` to `_` in header names.
 - [ADD] By default, populate `code.function.name` attribute to name of function containing the start of each span.
 This is implemented using the StackWalker API for performance reasons, starting in Java 9.
 If StackWalker is not available, the attribute is not populated.
